kubernetes_deploy/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: workshop-orchestra
spec:
  selector:
    matchLabels:
      app: workshop-orchestra
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: workshop-orchestra
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
    spec:
      containers:
      - name: workshop-orchestra
        image: seandavi/workshop-orchestra
        resources:
          requests:
            memory: "1024Mi"
            cpu: "500m"
        ports:
         - containerPort: 80
      serviceAccountName: workshop-orchestra-sa
