kubernetes_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-orchestra
spec:
  selector:
    app: workshop-orchestra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
