kubernetes_deploy/orchestra_istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orchestra-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orchestra
spec:
  hosts:
  - "app.orchestra.cancerdatasci.org"
  gateways:
  - orchestra-gateway
  http:
  - route:
    - destination:
        host: workshop-orchestra # .default.svc.cluster.local
