kubernetes_deploy/redirects_for_old.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: www-redir
spec:
  hosts:
  - "workshop.bioc.cancerdatasci.org"
  gateways:
  - orchestra-gateway
  http:
  - match:
    - uri:
        prefix: /
    redirect:
      authority: app.orchestra.cancerdatasci.org
